-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 23
-
Component/s: hotspot
Build environment:
MacBook Pro M1 Max
MacOS 14.2.1 (Sonoma)
Xcode 12.5.1
Error observed:
/Users/common/Workspace/OpenJDK/jdk/jdk/src/hotspot/share/opto/castnode.cpp:471:1: error: non-void function does not return a value in all control paths [-Werror,-Wreturn-type]
Compiler does not recognize the fatal() call at the end of the method as the end-of-life event for the program.
I know, the Xcode version is somewhat back level. Nevertheless, I would appreciate if this would be fixed to help those who are not able (for whatever reason) to upgrade Xcode.
MacBook Pro M1 Max
MacOS 14.2.1 (Sonoma)
Xcode 12.5.1
Error observed:
/Users/common/Workspace/OpenJDK/jdk/jdk/src/hotspot/share/opto/castnode.cpp:471:1: error: non-void function does not return a value in all control paths [-Werror,-Wreturn-type]
Compiler does not recognize the fatal() call at the end of the method as the end-of-life event for the program.
I know, the Xcode version is somewhat back level. Nevertheless, I would appreciate if this would be fixed to help those who are not able (for whatever reason) to upgrade Xcode.
- relates to
-
JDK-8322490 cleanup CastNode construction
-
- Resolved
-