8323820: [MacOS] build failure: non-void function does not return a value